--- a/SourceCode/Android/Zpotdrop/app/src/main/res/values/styles.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/values/styles.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright (c) 2015 Zpotdrop. All rights reserved.
+  -->
+
 <resources>
 
     <!-- Base application theme. -->
@@ -6,6 +10,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:editTextStyle">@style/EditTextStyle</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,5 +21,7 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="EditTextStyle" parent="Widget.AppCompat.EditText" />
 
 </resources>
