--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_login.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:gravity="bottom"
     android:orientation="vertical">
 
@@ -22,6 +23,7 @@
                 android:id="@+id/iv_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_to_border_normal"
                 android:src="@drawable/logo" />
 
             <TextView
@@ -110,6 +112,7 @@
                 android:id="@+id/tv_login_with_fb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_extra_small"
                 android:drawableLeft="@drawable/ic_facebook"
                 android:drawablePadding="@dimen/margin_extra_small"
                 android:text="@string/login_with_facebook"
@@ -118,6 +121,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginBottom="@dimen/margin_large"
                 android:layout_marginLeft="@dimen/margin_normal"
                 android:layout_marginRight="@dimen/margin_normal"
@@ -128,7 +132,7 @@
                     android:id="@+id/tv_not_yet_on_zd"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.55"
                     android:text="@string/not_yet_on_zpotdrop"
                     android:textColor="@color/text_gray" />
 
@@ -136,7 +140,7 @@
                     android:id="@+id/tv_forgot_password"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.45"
                     android:gravity="right"
                     android:text="@string/forgot_password"
                     android:textColor="@color/text_gray" />
