--- a/SourceCode/Android/Zpotdrop/app/src/main/res/values/colors.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="bg_chat_bubble_gray">#e6e6e6</color>
     <color name="text_gray">#c9c9c9</color>
     <color name="text_black">#1d1d1b</color>
+
+    <color name="white">#ffffff</color>
 </resources>
