--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_main.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2015 Zpotdrop. All rights reserved.
   -->
 
@@ -15,15 +14,22 @@
         android:layout_height="match_parent" />
 
     <!-- The navigation drawer -->
-    <ListView
+    <!--<ListView-->
+    <!--android:id="@+id/left_drawer"-->
+    <!--android:layout_width="240dp"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_gravity="start"-->
+    <!--android:background="@color/white"-->
+    <!--android:choiceMode="singleChoice"-->
+    <!--android:divider="@android:color/transparent"-->
+    <!--android:dividerHeight="0dp" />-->
+
+    <com.zpotdrop.view.LeftMenu
         android:id="@+id/left_drawer"
-        android:layout_width="240dp"
+        android:layout_width="@dimen/drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#111"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
+        android:background="@color/white"></com.zpotdrop.view.LeftMenu>
 
 
     <ListView
@@ -31,7 +37,7 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
-        android:background="#111"
+        android:background="@color/white"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp" />
