--- a/SourceCode/Android/Zpotdrop/app/src/main/res/values-xhdpi/dimens.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/values-xhdpi/dimens.xml
@@ -13,4 +13,12 @@
     <dimen name="margin_extra_large">28dp</dimen>
     <dimen name="margin_to_border_normal">25dp</dimen>
     <dimen name="text_size_bold">20sp</dimen>
+    <dimen name="menu_left_margin">35dp</dimen>
+
+    <dimen name="drawer_width">320dp</dimen>
+    <dimen name="avatar_size">120dp</dimen>
+    <dimen name="avatar_border">4dp</dimen>
+    <dimen name="zpot_all_progress_size">120dp</dimen>
+    <dimen name="zpot_all_progress_text_size">22sp</dimen>
+    <dimen name="zpot_all_progress_stroke_size">4sp</dimen>
 </resources>
