--- a/SourceCode/Android/Zpotdrop/app/src/main/res/values/circle_progress_bar_attrs.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/values/circle_progress_bar_attrs.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Zpotdrop. All rights reserved.
+  -->
+
 <resources>
 
     <declare-styleable name="CircleProgressBar">
@@ -25,5 +29,18 @@
             <enum name="invisible" value="1" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="HoloCircularProgressBar">
+        <attr name="stroke_width" format="dimension" />
+        <attr name="progress" format="float" />
+        <attr name="marker_progress" format="float" />
+        <attr name="progress_color" format="color" />
+        <attr name="progress_background_color" format="color" />
+        <attr name="thumb_visible" format="boolean" />
+        <attr name="marker_visible" format="boolean" />
+        <attr name="android:gravity" />
+    </declare-styleable>
+
+    <attr name="circularProgressBarStyle" format="reference" />
 
 </resources>
