--- a/SourceCode/Android/Zpotdrop/app/src/main/res/values/styles.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/values/styles.xml
@@ -24,4 +24,7 @@
 
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText" />
 
+    <style name="DialogTheme" parent="android:Theme.Dialog">
+        <item name="android:windowBackground">@drawable/dialog_background</item>
+    </style>
 </resources>
