--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragment_settings.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragment_settings.xml
@@ -4,9 +4,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:layout_marginLeft="@dimen/menu_left_margin"
-    android:background="@color/divider"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
 </LinearLayout>
