--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/line_horizontal.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/line_horizontal.xml
@@ -5,7 +5,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="1dp"
-    android:background="@color/text_gray"
+    android:background="@color/divider"
     android:orientation="vertical">
 
 </LinearLayout>
