- Add profile UI (partly)

--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_main.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,22 @@
     android:layout_height="match_parent">
     <!-- The main content view -->
 
-    <FrameLayout
-        android:id="@+id/content_frame"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.zpotdrop.view.Header
+            android:id="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.zpotdrop.view.Header>
+
+        <FrameLayout
+            android:id="@+id/content_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
 
     <!-- The navigation drawer -->
     <!--<ListView-->
