--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragement_profile.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragement_profile.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/primary_transparent_50"
-            android:padding="@dimen/margin_normal">
+            android:padding="@dimen/margin_extra_small">
 
             <ImageView
                 android:id="@+id/iv_settings"
