--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragment_settings.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragment_settings.xml
@@ -3,8 +3,154 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/text_gray"
     android:orientation="vertical">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/margin_normal"
+                android:paddingRight="@dimen/margin_normal"
+                android:paddingTop="@dimen/margin_normal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:id="@+id/lnl_first_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:paddingBottom="@dimen/margin_small"
+                            android:paddingTop="@dimen/margin_small">
+
+                            <TextView
+                                android:id="@+id/tv_first_name"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/first_name_settings" />
+
+                            <EditText
+                                android:id="@+id/edt_first_name"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@android:color/transparent" />
+
+                        </LinearLayout>
+
+                        <include layout="@layout/line_horizontal" />
+
+                        <LinearLayout
+                            android:id="@+id/lnl_last_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:paddingBottom="@dimen/margin_small"
+                            android:paddingTop="@dimen/margin_small">
+
+                            <TextView
+                                android:id="@+id/tv_last_name"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/last_name_settings" />
+
+                            <EditText
+                                android:id="@+id/edt_last_name"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@android:color/transparent" />
+
+                        </LinearLayout>
+
+                        <include layout="@layout/line_horizontal" />
+
+                        <LinearLayout
+                            android:id="@+id/lnl_hometown"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:paddingBottom="@dimen/margin_small"
+                            android:paddingTop="@dimen/margin_small">
+
+                            <TextView
+                                android:id="@+id/tv_hometown"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/hometown" />
+
+                            <EditText
+                                android:id="@+id/edt_hometown"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@android:color/transparent" />
+
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_small"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/iv_avatar"
+                            android:layout_width="@dimen/avatar_size"
+                            android:layout_height="@dimen/avatar_size"
+                            android:src="@drawable/ic_avatar"
+                            app:civ_border_color="@color/colorPrimary"
+                            app:civ_border_width="@dimen/avatar_border" />
+
+                        <TextView
+                            android:id="@+id/tv_edit_picture"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/margin_extra_small"
+                            android:text="@string/edit_picture"
+                            android:textColor="@color/text_gray" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <include layout="@layout/line_horizontal" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
