--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/left_menu.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/left_menu.xml
@@ -21,6 +21,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/lnl_profile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -58,68 +59,143 @@
                 android:layout_marginLeft="@dimen/menu_left_margin"
                 android:layout_marginTop="@dimen/margin_extra_large" />
 
-            <TextView
-                android:id="@+id/tv_menu_feed"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                android:drawableLeft="@drawable/ic_menu_post"
-                android:drawablePadding="@dimen/margin_small"
                 android:gravity="center_vertical"
-                android:text="@string/feed"
-                android:textSize="@dimen/menu_left_text_size" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_menu_feed"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_menu_feed"
+                    android:drawablePadding="@dimen/margin_small"
+                    android:gravity="center_vertical"
+                    android:text="@string/feed"
+                    android:textSize="@dimen/menu_left_text_size" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:src="@drawable/ic_green_arrow_right" />
+
+            </LinearLayout>
 
             <include layout="@layout/menu_divider" />
 
-            <TextView
-                android:id="@+id/tv_menu_post"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                android:drawableLeft="@drawable/ic_menu_post"
-                android:drawablePadding="@dimen/margin_small"
                 android:gravity="center_vertical"
-                android:text="@string/post"
-                android:textSize="@dimen/menu_left_text_size" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_menu_post"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_menu_post"
+                    android:drawablePadding="@dimen/margin_small"
+                    android:gravity="center_vertical"
+                    android:text="@string/post"
+                    android:textSize="@dimen/menu_left_text_size" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:src="@drawable/ic_green_arrow_right" />
+
+            </LinearLayout>
 
             <include layout="@layout/menu_divider" />
 
-            <TextView
-                android:id="@+id/tv_menu_find"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                android:drawableLeft="@drawable/ic_menu_post"
-                android:drawablePadding="@dimen/margin_small"
                 android:gravity="center_vertical"
-                android:text="@string/find"
-                android:textSize="@dimen/menu_left_text_size" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_menu_find"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_menu_find"
+                    android:drawablePadding="@dimen/margin_small"
+                    android:gravity="center_vertical"
+                    android:text="@string/find"
+                    android:textSize="@dimen/menu_left_text_size" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:src="@drawable/ic_green_arrow_right" />
+
+            </LinearLayout>
 
             <include layout="@layout/menu_divider" />
 
-            <TextView
-                android:id="@+id/tv_menu_chat"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                android:drawableLeft="@drawable/ic_menu_post"
-                android:drawablePadding="@dimen/margin_small"
                 android:gravity="center_vertical"
-                android:text="@string/chat"
-                android:textSize="@dimen/menu_left_text_size" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_menu_chat"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_menu_chat"
+                    android:drawablePadding="@dimen/margin_small"
+                    android:gravity="center_vertical"
+                    android:text="@string/chat"
+                    android:textSize="@dimen/menu_left_text_size" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:src="@drawable/ic_green_arrow_right" />
+
+            </LinearLayout>
 
             <include layout="@layout/menu_divider" />
 
-            <TextView
-                android:id="@+id/tv_menu_search"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
-                android:drawableLeft="@drawable/ic_menu_post"
-                android:drawablePadding="@dimen/margin_small"
                 android:gravity="center_vertical"
-                android:text="@string/search"
-                android:textSize="@dimen/menu_left_text_size" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_menu_search"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_menu_search"
+                    android:drawablePadding="@dimen/margin_small"
+                    android:gravity="center_vertical"
+                    android:text="@string/search"
+                    android:textSize="@dimen/menu_left_text_size" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small"
+                    android:src="@drawable/ic_green_arrow_right" />
+
+            </LinearLayout>
 
             <include layout="@layout/menu_divider" />
 
